<resources>
    <string name="app_name">My Application</string>

    <string name="title">My Nanodegree Apps!</string>
    <string name="app1">SPOTIFY STREAMER</string>
    <string name="app2">SCORES APP</string>
    <string name="app3">LIBRARY APP</string>
    <string name="app4">BUILD IT BIGGER</string>
    <string name="app5">XYZ READER</string>
    <string name="app6">CPASTONE :MY OWN APP!</string>
    <string name="action_settings">Settings</string>
</resources>
